--- a/css/style.css
+++ b/css/style.css
@@ -118,14 +118,23 @@ input.prflxtrflds-value-delete-check + label::before {
 	background-color: #f5f5f5;
 	opacity: 0.8;
 	filter: alpha(opacity=80);
-	border: 1px solid #ccc;
-}
-.prflxtrflds-placeholder {
-	visibility: visible !important;
+	border: 1px solid #888;
 }
 .prflxtrflds-wplist-select {
 	max-width: 100%;
 }
+.prflxtrflds-placeholder {
+	visibility: visible !important;
+	border: 1px dashed #bbb;
+}
+.prflxtrflds-drag-values-container {
+	max-width: 400px;
+}
+.prflxtrflds-drag-values-container .prflxtrflds-placeholder {
+	min-height: 20px;
+	clear: both;
+}
+/* End drag n drop styles */
 .rtl .prflxtrflds-drag-values input,
 .rtl .prflxtrflds-sortable-form,
 .rtl .prflxtrflds-value-name,
@@ -146,7 +155,6 @@ input.prflxtrflds-value-delete-check + label::before {
 		display: none !important;
 	}
 }
-/* End drag n drop styles */
 @media screen and ( max-width: 780px ) {
     .prflxtrflds-delete {
         padding-right: 10%;
