--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,8 @@ input.prflxtrflds-value-delete-check + label::before {
 	filter: alpha(opacity=80);
 	border: 1px solid #888;
 }
-.prflxtrflds-wplist-select {
+.prflxtrflds-wplist-select,
+.prflxtrflds_specify {
 	max-width: 100%;
 }
 .prflxtrflds-placeholder {
